--- a/Buoi01/PTTKTT_Buoi01/PTTKTT_Buoi01/PTTKTT_Buoi01.csproj
+++ b/Buoi01/PTTKTT_Buoi01/PTTKTT_Buoi01/PTTKTT_Buoi01.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TongMang.cs" />
+    <Compile Include="main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
